IE7 Horizontal scroll bar fix

--- a/src/base/sass/_base-screen-ie.scss
+++ b/src/base/sass/_base-screen-ie.scss
@@ -30,6 +30,8 @@
 
 	// Right to left (RTL) CSS
 	&[dir="rtl"] {
+		overflow-x: hidden;
+
 		#wb-skip {
 			ul {
 				float: right;
